@@ -85,6 +85,10 @@ IN DEVELOPMENT
 
   BUG FIXES:
 
+    * ``bzr ignore`` gives a more informative message when existing
+      version controlled files match the ignore pattern. (Neil
+      Martinsen-Burrell, #248895)
+
     * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
       than fetching trees and determining a delta itself. (Jelmer
       Vernooij, #315048)
